<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/pr_grocerybag" />

        <TextView
            android:id="@+id/statistics_product_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pr_product_empty_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/pr_barcode" />

        <TextView
            android:id="@+id/statistics_product_barcode_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pr_product_empty_barcode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/statistics_shop_count_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/statistics_shop_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/pr_add" />

        <ImageButton
            android:id="@+id/statistics_shop_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/pr_clear" />

        <ImageButton
            android:id="@+id/statistics_shop_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/pr_list" />

    </LinearLayout>

    <Switch
        android:id="@+id/statistics_statistics_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_statistics_show_switch_on" />

    <LinearLayout
        android:id="@+id/statistics_statistics_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_price_last_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_price_last_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_promo_last_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_promo_last_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_price_mean_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_price_mean_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_promo_mean_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_promo_mean_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_price_min_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_price_min_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_promo_min_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_promo_min_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_price_max_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_price_max_empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@drawable/pr_statistics" />

            <TextView
                android:id="@+id/statistics_promo_max_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_statistics_promo_max_empty" />

        </LinearLayout>

    </LinearLayout>

    <com.ds.app.pricereading.activity.support.ResultViewer
        android:id="@+id/statistics_result_viewer"
        page_default_size="10"
        page_number_format="Pagina %d di %d"
        page_size_format="%d elementi per pagina"
        page_size_list="10, 20, 30, 40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp" />

</LinearLayout>