<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.shop.ShopListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/shop_list_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pr_shop_hint_name"
                android:inputType="textCapCharacters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/shop_list_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pr_shop_hint_address"
                android:inputType="textCapCharacters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/shop_list_location_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pr_shop_hint_location"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/shop_list_postal_code_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/pr_shop_hint_postal_code"
                android:inputType="number" />

            <EditText
                android:id="@+id/shop_list_distribution_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/pr_shop_hint_distribution"
                android:inputType="textCapCharacters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/shop_list_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pr_clear" />

            <ImageButton
                android:id="@+id/shop_list_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pr_search" />

            <ImageButton
                android:id="@+id/shop_list_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/pr_add" />

        </LinearLayout>

    </LinearLayout>

    <com.ds.app.pricereading.activity.support.ResultViewer
        android:id="@+id/shop_list_result_viewer"
        page_default_size="10"
        page_number_format="Pagina %d di %d"
        page_size_format="%d elementi per pagina"
        page_size_list="10, 20, 30, 40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp" />

</LinearLayout>